VERIFIED FIXED29123
Fails to parse the "d" attribute of a path if a command starts with a '.'
https://bugs.webkit.org/show_bug.cgi?id=29123
Summary Fails to parse the "d" attribute of a path if a command starts with a '.'
Rafał Rutkowski
Reported 2009-09-10 06:49:35 PDT
The following path will not be parsed <path d="M.1 0.1l0 .3 .2 0" /> The cause is the last command: ".2 0", which starts with a '.'. The following examples work fine: M.1 0.1l0 .3 +.2 0 M.1 0.1l0 .3 0.2 0 M.1 0.1l0 .3 l.2 0 M.1 0.1l0 .3 Test case: http://strony.aster.pl/rrutkows/test_cases/webkit/svg_path_parse_error/L.svg Result: Nothing is displayed. An error appears in the Chrome console: Error: Problem parsing d="M.1 0.1l0 .3 .2 0" Expected result: A black shape resembling a capital letter 'L' should be displayed. Works on Opera, Firefox and IE+Adobe SVG Viewer. Tested on Safari 4.0 (530.17) and Chrome 4.0.206.1 (532.0)
Attachments
patch that fixes SVG path tat starts with dot '.' (1.37 KB, patch)
2009-09-14 07:49 PDT, Charles Wei
darin: review-
re-submit the patch with test case added (2.92 KB, patch)
2009-09-15 00:15 PDT, Charles Wei
no flags
Charles Wei
Comment 1 2009-09-14 07:49:34 PDT
Created attachment 39544 [details] patch that fixes SVG path tat starts with dot '.' This patch fixes the SVT Path problem that starts with a dot '.'
Darin Adler
Comment 2 2009-09-14 07:52:51 PDT
Comment on attachment 39544 [details] patch that fixes SVG path tat starts with dot '.' In the WebKit project we require regression tests checked in along with bug fixes. There's already a test of the path parser in LayoutTests/svg/dom/path-parser.html so for this bug you could probably add some tests cases to that. review- because of lack of a test
Charles Wei
Comment 3 2009-09-15 00:15:07 PDT
Created attachment 39589 [details] re-submit the patch with test case added resubmitting the patch with test cases added.
WebKit Commit Bot
Comment 4 2009-09-15 10:52:16 PDT
Comment on attachment 39589 [details] re-submit the patch with test case added Clearing flags on attachment: 39589 Committed r48393: <http://trac.webkit.org/changeset/48393>
WebKit Commit Bot
Comment 5 2009-09-15 10:52:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.