2009-09-15  Charles Wei  <charles.wei@torchmobile.com.cn>

Reviewed by George Staikos.

        Add a new test case for SVG Path parsing with a default command and starts with dot '.'
        https://bugs.webkit.org/show_bug.cgi?id=29123

        * svg/dom/path-parser-expected.txt:
        * svg/dom/resources/path-parser.js:
2009-09-15  Charles Wei  <charles.wei@torchmobile.com.cn>

        Reviewed by George Staikos.

        Fix SVG path parsing error if a command starts with dot '.'
        https://bugs.webkit.org/show_bug.cgi?id=29123

        * svg/SVGParserUtilities.cpp:
        (WebCore::SVGPathParser::parseSVG):

Canonical link: https://commits.webkit.org/39958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48393 268f45cc-cd09-0410-ab3c-d52691b4dbfc